tests/fixtures/errors/cmp_class_no_eq.z
# Reference types (classes, unions) get no default == -- comparing one that
# declares none is a clean typecheck error, not invalid C. != derives from ==,
# so it errors too.
Counter: class { value: i64 }
main: function is {
    a: Counter value: 1
    b: Counter value: 2
    if a == b then print "eq" else print "ne"
}
